// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package azure.aci;

option go_package = "waypoint/builtin/azure/aci";

message Deployment {
  string url = 1;
  string id = 2;
  ContainerGroup container_group = 3;

  message ContainerGroup {
    string name = 1;
    string resource_group = 2;
    string subscription_id = 3;
  }
}

message Release {
  string url = 1;
}
